<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/redirect_strava"
            android:icon="@drawable/ic_launch"
            android:title="@string/redirect_strava" />
        <item
            android:id="@+id/create_plan"
            android:icon="@drawable/ic_nav_create"
            android:title="@string/create_plan" />
        <item
            android:id="@+id/actual_plan"
            android:icon="@drawable/ic_nav_actual"
            android:title="@string/actual_plan" />
        <item
            android:id="@+id/historical_plan"
            android:icon="@drawable/ic_nav_list"
            android:title="@string/historical_plan" />
    </group>

</menu>
