<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.InfoApiStravaFragment"
    android:padding="50dp"
    android:id="@+id/relativeLayout">

    <EditText
        android:id="@+id/editText_clientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cliente_id"/>


    <EditText
        android:id="@+id/editText_secretClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_clientId"
        android:layout_marginTop="30dp"
        android:hint="@string/secret_client" />

    <Button
        android:id="@+id/button_go_to_strava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_secretClient"
        android:layout_marginTop="30dp"
        android:text="@string/button_go_to_strava" />

</RelativeLayout>